property to prevent overflow in mobile screens

--- a/src/pydata_sphinx_theme/assets/styles/sections/_article.scss
+++ b/src/pydata_sphinx_theme/assets/styles/sections/_article.scss
@@ -5,6 +5,7 @@
   flex-grow: 1;
   flex-direction: column;
   display: flex;
+  min-width: 0;
 
   .bd-content {
     display: flex;
